# Notler

./: CMakeLists.txt  README.md
qml/: main.qml  qml.qrc
qml/blocks/: CustomToolTip.qml  Editor.qml  RoundButton.qml  Sidebar.qml  SidebarListModel.qml  SidebarNewNoteButton.qml  SidebarNoteDelegate.qml  Toolbar.qml
src/: globals.h  main.cpp
src/models/: notebookmodel.cpp  notebookmodel.h  noteslistmodel.cpp  noteslistmodel.h
src/objects/: note.cpp  note.h  notebook.cpp  notebook.h  noteslist.cpp  noteslist.h
